--- a/inkstyle/pubspec.yaml
+++ b/inkstyle/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   supabase_flutter: ^1.10.25
   bcrypt: ^1.1.3
   flutter_dotenv: ^5.1.0
+  shared_preferences: ^2.2.2
+  supabase_auth_ui: ^0.2.1
+  dart_jsonwebtoken: ^2.12.1
+  flutter_secure_storage: ^9.0.0
+  lsp_server: ^0.3.1
 
 dev_dependencies:
   flutter_test:
