--- a/inkstyle/pubspec.yaml
+++ b/inkstyle/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   dart_jsonwebtoken: ^2.12.1
   flutter_secure_storage: ^9.0.0
   lsp_server: ^0.3.1
+  requests: ^4.7.0
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
