--- a/inkstyle/pubspec.yaml
+++ b/inkstyle/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   lsp_server: ^0.3.1
   requests: ^4.7.0
   cached_network_image: ^3.3.0
+  flutter_card_swiper: ^6.0.0
 
 dev_dependencies:
   flutter_test:
