--- a/inkstyle/pubspec.yaml
+++ b/inkstyle/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   requests: ^4.7.0
   cached_network_image: ^3.3.0
   flutter_card_swiper: ^6.0.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
