--- a/inkstyle/pubspec.yaml
+++ b/inkstyle/pubspec.yaml
@@ -35,11 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  supabase_flutter: ^1.10.25
+  supabase_flutter: ^2.2.0
   bcrypt: ^1.1.3
   flutter_dotenv: ^5.1.0
   shared_preferences: ^2.2.2
-  supabase_auth_ui: ^0.2.1
+  supabase_auth_ui: ^0.4.0+1
   dart_jsonwebtoken: ^2.12.1
   flutter_secure_storage: ^9.0.0
   lsp_server: ^0.3.1
